# repository_eos

./: README  README.md
artwork-breath/artwork-breath-master/: CMakeLists.txt  Readme.md
artwork-breath/artwork-breath-master/Kvantum/: config_autostart.sh
artwork-breath/artwork-breath-master/breath/: CMakeLists.txt  metadata.desktop
artwork-breath/artwork-breath-master/breath/icons/: .directory  akonadi.svgz  akregator.svgz  amarok.svgz  apport.svgz  audio.svgz  battery.svgz  bookmarks.svgz  cantata.svgz  computer.svgz  configure.svgz  device.svgz  document.svgz  drive.svgz  go.svgz  kalarm.svgz  kdeconnect.svgz  keyboard.svgz  kget.svgz  kgpg.svgz  klipper.svgz  kmail.svgz  konv_message.svgz  konversation.svgz  kopete.svgz  korgac.svgz  kruler.svgz  kteatime.svgz  ktorrent.svgz  list.svgz  mail.svgz  media.svgz  nepomuk.svgz  network.svgz  notification.svgz  phone.svgz  preferences.svgz  printer.svgz  quassel.svgz  slc.svgz  (+10 more)
artwork-breath/artwork-breath-master/breath/widgets/: .directory  analog_meter.svgz  timer.svgz
artwork-breath/artwork-breath-master/icons/: CMakeLists.txt  icon-theme.cache  index.theme
artwork-breath/artwork-breath-master/icons-dark/: CMakeLists.txt  index.theme
artwork-breath/artwork-breath-master/lookandfeel/: metadata.desktop
artwork-breath/artwork-breath-master/lookandfeel/contents/: defaults
artwork-breath/artwork-breath-master/lookandfeel/contents/components/: UserDelegate.qml
artwork-breath/artwork-breath-master/lookandfeel/contents/splash/: CMakeLists.txt  Splash.qml
artwork-breath/artwork-breath-master/sddm-theme/: .directory  metadata.desktop
artwork-breath/artwork-breath-master/wallpapers/: CMakeLists.txt
artwork-breath/artwork-breath-master/wallpapers/Breath/: metadata.desktop
ckbcomp/: PKGBUILD
settings-manager/eos-settings-manager-1.0/: .gitignore  AUTHORS  CMakeLists.txt  README.md  create_ts  eos-settings-manager.kdev4
settings-manager/eos-settings-manager-1.0/.tx/: config
settings-manager/eos-settings-manager-1.0/hacking/: astylerc  msmstyle
settings-manager/eos-settings-manager-1.0/resources/icons/: CMakeLists.txt
settings-manager/eos-settings-manager-1.0/src/: CMakeLists.txt  eos-category.desktop
settings-manager/eos-settings-manager-1.0/src/libmsm/: ActionDialog.cpp  ActionDialog.h  CMakeLists.txt  Kernel.cpp  Kernel.h  KernelModel.cpp  KernelModel.h  LanguageCommon.cpp  LanguageCommon.h  LanguagePackages.cpp  LanguagePackages.h  LanguagePackagesItem.cpp  LanguagePackagesItem.h  ListWidget.cpp  ListWidget.h  MsmCommon.cpp  MsmCommon.h  NotifierSettingsDialog.cpp  NotifierSettingsDialog.h  NotifierSettingsDialog.ui  PacmanUtils.cpp  PacmanUtils.h  PageWidget.cpp  PageWidget.h  language_packages.json  language_packages.qrc  translations.qrc
settings-manager/eos-settings-manager-1.0/src/libmsm/translations/: msm_ar.ts  msm_ast.ts  msm_az_AZ.ts  msm_bg_BG.ts  msm_ca.ts  msm_cs_CZ.ts  msm_cy.ts  msm_da.ts  msm_de.ts  msm_el.ts  msm_en.ts  msm_es.ts  msm_es_419.ts  msm_es_AR.ts  msm_fa.ts  msm_fa_IR.ts  msm_fi.ts  msm_fo.ts  msm_fr.ts  msm_gl_ES.ts  msm_he.ts  msm_hi.ts  msm_hr.ts  msm_hu.ts  msm_id_ID.ts  msm_is.ts  msm_it.ts  msm_ja.ts  msm_ka.ts  msm_lt.ts  msm_ml.ts  msm_ms.ts  msm_nb.ts  msm_nl.ts  msm_pl.ts  msm_pt_BR.ts  msm_pt_PT.ts  msm_ro.ts  msm_ru.ts  msm_sk_SK.ts  (+13 more)
settings-manager/eos-settings-manager-1.0/src/modules/: CMakeLists.txt
settings-manager/eos-settings-manager-1.0/src/modules/kernel/: CMakeLists.txt  KernelAuthHelper.cpp  KernelAuthHelper.h  KernelCommon.cpp  KernelCommon.h  KernelInfoDialog.cpp  KernelInfoDialog.h  KernelListViewDelegate.cpp  KernelListViewDelegate.h  KernelModule.cpp  KernelModule.h  KernelPage.cpp  KernelPage.h  kernel.qrc  msm_kernel.actions  msm_kernel.desktop
settings-manager/eos-settings-manager-1.0/src/modules/keyboard/: CMakeLists.txt  KeyboardAuthHelper.cpp  KeyboardAuthHelper.h  KeyboardCommon.cpp  KeyboardCommon.h  KeyboardItem.cpp  KeyboardItem.h  KeyboardModel.cpp  KeyboardModel.h  KeyboardModule.cpp  KeyboardModule.h  KeyboardPage.cpp  KeyboardPage.h  KeyboardPreview.cpp  KeyboardPreview.h  SetKeyboardLayoutJob.cpp  SetKeyboardLayoutJob.h  kbd-model-map  keyboard.qrc  msm_keyboard.actions  msm_keyboard.desktop
settings-manager/eos-settings-manager-1.0/src/modules/language_packages/: CMakeLists.txt  LanguagePackagesAuthHelper.cpp  LanguagePackagesAuthHelper.h  LanguagePackagesCommon.cpp  LanguagePackagesCommon.h  LanguagePackagesModule.cpp  LanguagePackagesModule.h  LanguagePackagesPage.cpp  LanguagePackagesPage.h  PageLanguagePackages.ui.bak  msm_language_packages.actions  msm_language_packages.desktop
settings-manager/eos-settings-manager-1.0/src/modules/locale/: CMakeLists.txt  EnabledLocalesModel.cpp  EnabledLocalesModel.h  LanguageListViewDelegate.cpp  LanguageListViewDelegate.h  LocaleAuthHelper.cpp  LocaleAuthHelper.h  LocaleCommon.cpp  LocaleCommon.h  LocaleModule.cpp  LocaleModule.h  LocalePage.cpp  LocalePage.h  SelectLocalesDialog.cpp  SelectLocalesDialog.h  SupportedLocalesItem.cpp  SupportedLocalesItem.h  SupportedLocalesModel.cpp  SupportedLocalesModel.h  msm_locale.actions  msm_locale.desktop
settings-manager/eos-settings-manager-1.0/src/modules/mhwd/: CMakeLists.txt  MhwdAuthHelper.cpp  MhwdAuthHelper.h  MhwdCommon.cpp  MhwdCommon.h  MhwdModule.cpp  MhwdModule.h  MhwdPage.cpp  MhwdPage.h  mhwd.qrc  msm_mhwd.actions  msm_mhwd.desktop
settings-manager/eos-settings-manager-1.0/src/modules/timedate/: CMakeLists.txt  LocaleGlobal.cpp  LocaleGlobal.h  TimeDateCommon.cpp  TimeDateCommon.h  TimeDateKcm.cpp  TimeDateKcm.h  TimeDateModule.cpp  TimeDateModule.h  TimeDatePage.cpp  TimeDatePage.h  TimeDateService.cpp  TimeDateService.h  TimeZoneDialog.cpp  TimeZoneDialog.h  TimeZoneWidget.cpp  TimeZoneWidget.h  msm_timedate.desktop  timedate.qrc
settings-manager/eos-settings-manager-1.0/src/msm/: CMakeLists.txt  MsmApplication.cpp  MsmApplication.h  MsmWindow.cpp  MsmWindow.h  MsmWindow.ui  MsmWindow_old.cpp  eos-settings-manager.desktop  main.cpp  msm.qrc
settings-manager/eos-settings-manager-1.0/src/notifier/: CMakeLists.txt
(+141 files in other folders)
